# remotetwo-fw

./: .gitignore  CMakeLists.txt  Kconfig  TODO  TODO.md  TODO.txt  build_output.txt  commands.md  display_hierarchy.txt  notes  pm_static.yml  prj.conf  prj_disp.conf  prj_drv  prj_drv.conf  prj_tmag.conf  remotetwo-fw.code-workspace  remotetwo_pins.txt  s -ExecutionPolicy RemoteSigned) ; (& cProjektRemoteTworemotetwo-fw.venvScriptsActivate.ps1)  src_disp.rar  sysbuild.conf  sysbuild_drv  sysbuild_drv.conf  sysbuild_tmag.conf
boards/: TODO  drv_test  drv_test.overlay  nrf5340dk_nrf5340_cpuapp_disp.overlay  nrf5340dk_nrf5340_cpuapp_drv.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay  remotetwo_nrf5340_cpuapp_ns.overlay  tmag_test.overlay
docs/: block_diagram.html  block_diagram_simple.html  diff.txt  diff_main.txt  main_DISP_test_diff.txt  ssd1309_fix.txt
dts/bindings/: remote-two,bldc-6pwm.yaml  remote-two,bldc-drv8311.yaml  remote-two,status-gpios.yaml
dts/bindings/spi/: ams,as5048a.yaml
src/: BLE_commands.c  BLE_commands.h  DRV_test.c  TMAG_test.c  disp_test.c  haptic.c  haptic.h  main.c  pwr_ctrl_early.c  remote_control.c  remote_control.h  ui_display.c  ui_display.h
src/drivers/: as5048a.c  as5048a.h  bldc_driver_3pwm.c  bldc_driver_3pwm.h  bldc_driver_6pwm.c  bldc_driver_6pwm.h  bldc_motor.c  bldc_motor.h  current_sense.c  current_sense.h  ssd1306_display.c  ssd1306_display.h  ssd1309_display.c  ssd1309_display.h  tmag5170.c  tmag5170.h  tmag5170_encoder.c  tmag5170_sensor.c  tmag5170_sensor.h
sysbuild/: hci_ipc.conf  hci_ipc.overlay  mcuboot.conf  mcuboot.overlay
test_disp/: CMakeLists_disp.txt  Kconfig_disp  nrf5340dk_nrf5340_cpuapp_disp.overlay  prj_disp.conf  remotetwo_nrf5340_cpuapp_ns_main_in_DISP_test_branch.overlay
